--- a/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor.scss
+++ b/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor.scss
@@ -1,60 +1,26 @@
-.form-group {
-    label {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
+header h4 {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 140%;
+}
 
-        span {
-            font-size: 1.2rem;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 140%; /* 16.8px */
-            letter-spacing: -0.12px;
-        }
+.currency-selector {
+    border-radius: 32px;
+    border: 1px solid var(--purple-100);
+    padding: 8px 16px;
+    box-sizing: border-box;
+    width: 100%;
 
-        input, select, button {
-            display: flex;
-            padding: 16px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 10px;
-            border-radius: 26px;
-            border: 1px solid var(--purple-100);
-            opacity: 0.5;
-        }
+    ::deep select {
+        width: 100%;
+        background: transparent;
+        cursor: pointer;
+        border: none;
+        background: var(--yellow-50);
 
-        select {
-            width: 50%;
-        }
-    }
-
-    &.amount {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-    }
-
-    .amount-grid {
-        button {
-            padding: 16px;
-            margin-right: 5px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 10px;
-            border-radius: 26px;
-            border: 1px solid var(--purple-100);
-            opacity: 1;
-
-            &:hover {
-                background: var(--gray-200);
-            }
-
-            &.selected {
-                background-color: white;
-                border-color: darkblue;
-            }
+        &:focus {
+            outline: none;
+            border-color: var(--purple-300);
         }
     }
 }
