--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -33,7 +33,9 @@
                     <hr />
                     <div class="menu-profile">
                         <h5>Profile</h5>
-                        <Sparc.Blossom.SparcEngine.Aura.SparcAura />
+                        <Sparc.Blossom.SparcEngine.Aura.SparcAura>
+                            <CurrencySelector Avatar="context" />
+                        </Sparc.Blossom.SparcEngine.Aura.SparcAura>
                     </div>
                 </div>
             </div>
