--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -25,9 +25,9 @@
                 <div class="menu">
                     <div class="menu-pages">
                         <h5>Pages</h5>
+                        <a id="catalog-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/store")'>Sparc Store</a>
                         <a id="about-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/about")'>About Us</a>
-                        <a id="catalog-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/catalog")'>Catalog</a>
-@*                         <a id="ideas-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/ideas")'>Ideas</a>
+                        @*                         <a id="ideas-btn" class="button secondary-btn" @onclick='() => Nav.NavigateTo("/ideas")'>Ideas</a>
  *@                        @* <Auth /> *@
                     </div>
                     <hr />
