Update product actions and info display enhancements
- Modified button text in `ProductActions.razor` to show product IDs.
- Changed demo tab button color from gray to blue in CSS files.
- Enhanced product title display in `ProductInfo.razor` to include subtitles.
- Updated owned product messages to reflect active orders or trials.
- Added new `Subtitle` property to the `Product` class.
- Expanded "Tovik" product description with detailed purchase information.

--- a/Sparc2/Sparc2/Catalog/ProductActions.razor
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor
@@ -4,11 +4,11 @@
     <div class="tabs">
         @if (OwnsProduct)
         {
-            <button id="download-tab" class="product-tab"><h6>Go to @ActiveProduct.Title &rarr;</h6></button>
+            <button id="download-tab" class="product-tab"><h6>Go to @ActiveProduct.Id &rarr;</h6></button>
         }
         else
         {
-            <button id="demo-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Try It Out</h6></button>
+            <button id="demo-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Try @ActiveProduct.Id &rarr;</h6></button>
         }
         @if (Price != null)
         {
