--- a/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
@@ -97,7 +97,7 @@
         }
 
         &#demo-tab {
-            background: var(--gray-600);
+            background: var(--blue);
         }
 
         &#download-tab {
